# OGF-engine

./: CMakeLists.txt  OGFConfig.h.in  README.md
depends/assimp--3.0.1270-sdk/: CMakeLists.txt
depends/assimp--3.0.1270-sdk/code/: LWOAnimation.cpp  Vertex.h
depends/assimp--3.0.1270-sdk/include/assimp/: defs.h
depends/freeglut-2.8.1/: CMakeLists.txt
depends/glew-1.10.0/: CMakeLists.txt
depends/glfw-3.0.3/docs/html/: Thumbs.db
depends/soil-20080707/: CMakeLists.txt
include/: Debug.h  FrameBuffer.h  Image.h  LightProperties.h  MaterialProperties.h  PhongProperty.h  Scene.h  Shader.h  ShaderLayout.h  ShaderManager.h  ShaderProgram.h  TerrainContentData.h  Texture.h  Texture2D.h  TextureCubeMap.h  camera.h  glmhppnowarnings.h
include/components/: AbstractComponent.h  Blending.h  DisableDepthMasking.h  IBODraw.h  Instancing.h  SimpleDraw.h  StencilPlane.h  SwitchableComponent.h
include/mesh/: AbstractMesh.h  AssImpMesh.h  Cube.h  Quad.h  Sphere.h  Terrain.h
include/nodes/: AbstractNode.h  AssImpNode.h  Camera.h  LightNode.h  MeshNode.h  Skybox.h
resources/: earth.dae  ico.dae  monkey.dae  quad.dae  tree.3ds
resources/shaders/: fBumpMapLightshader.glsl  fColorID.glsl  fInstancing.glsl  fLightshader.glsl  fSimpleTexture.glsl  fSkybox.glsl  fTerrain.glsl  fTree.glsl  fWater.glsl  gInstanceCulling.glsl  vBumpMapLightshader.glsl  vInstanceCulling.glsl  vInstancing.glsl  vLightshader.glsl  vPassthrough.glsl  vSkybox.glsl  vTerrain.glsl  vTree.glsl  vWater.glsl
resources/textures/: Thumbs.db
src/: CMakeLists.txt  Debug.cpp  FrameBuffer.cpp  Image.cpp  LightProperties.cpp  MaterialProperties.cpp  PhongProperty.cpp  Scene.cpp  ShaderManager.cpp  ShaderProgram.cpp  TerrainContentData.cpp  Texture.cpp  Texture2D.cpp  TextureCubeMap.cpp  camera.cpp  main.cpp  mainSveinung.cpp
src/components/: Blending.cpp  DisableDepthMasking.cpp  IBODraw.cpp  Instancing.cpp  SimpleDraw.cpp  StencilPlane.cpp  SwitchableComponent.cpp
src/mesh/: AbstractMesh.cpp  AssImpMesh.cpp  Cube.cpp  Quad.cpp  Sphere.cpp  Terrain.cpp
src/nodes/: AbstractNode.cpp  AssImpNode.cpp  Camera.cpp  LightNode.cpp  MeshNode.cpp  Skybox.cpp
