CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(INCLUDE_FOLDER ${CMAKE_SOURCE_DIR}/include)

FILE(GLOB ROOT_HEADER ${INCLUDE_FOLDER}/*.h)
FILE(GLOB ROOT_SOURCE *.cpp)
FILE(GLOB COMPONENTS_HEADER ${INCLUDE_FOLDER}/components/*.h)
FILE(GLOB COMPONENTS_SOURCE components/*.cpp)
FILE(GLOB MESH_HEADER ${INCLUDE_FOLDER}/mesh/*.h)
FILE(GLOB MESH_SOURCE mesh/*.cpp)
FILE(GLOB NODES_HEADER ${INCLUDE_FOLDER}/nodes/*.h)
FILE(GLOB NODES_SOURCE nodes/*.cpp)
FILE(GLOB SHADERS ${CMAKE_SOURCE_DIR}/resources/shaders/*.glsl)

IF(MSVC)
	SOURCE_GROUP("Header Files" FILES ${ROOT_HEADER})
	SOURCE_GROUP("Source Files" FILES ${ROOT_SOURCE})
	SOURCE_GROUP("Header Files\\components" FILES ${COMPONENTS_HEADER})
	SOURCE_GROUP("Source Files\\components" FILES ${COMPONENTS_SOURCE})
	SOURCE_GROUP("Header Files\\mesh" FILES ${MESH_HEADER})
	SOURCE_GROUP("Source Files\\mesh" FILES ${MESH_SOURCE})
	SOURCE_GROUP("Header Files\\nodes" FILES ${NODES_HEADER})
	SOURCE_GROUP("Source Files\\nodes" FILES ${NODES_SOURCE})
	SOURCE_GROUP("Shaders" FILES ${SHADERS})
ENDIF()

SET(Headers
	${ROOT_HEADER}
	${COMPONENTS_HEADER}
	${MESH_HEADER}
	${NODES_HEADER}
)

SET(Sources
	${ROOT_SOURCE}
	${COMPONENTS_SOURCE}
	${MESH_SOURCE}
	${NODES_SOURCE}
)

ADD_EXECUTABLE(${NAME} ${Headers} ${Sources})

FIND_PACKAGE(OpenGL REQUIRED)

TARGET_LINK_LIBRARIES(${NAME}
	${OPENGL_LIBRARIES}
	${GLEW_NAME}
	${GLUT_NAME}
	${SOIL_NAME}
	${ASSIMP_NAME}
)
