CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(freeglutlib)

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(
	include
	src
)

FILE(GLOB FREEGLUT_SOURCES src/*.c)

ADD_LIBRARY(${GLUT_NAME} ${FREEGLUT_SOURCES})

IF(CYGWIN OR MSYS OR MINGW OR MSVC)
	TARGET_LINK_LIBRARIES(${GLUT_NAME}
		winmm
		user32
		gdi32
		${OPENGL_LIBRARIES}
	)
ELSEIF(UNIX)
	MESSAGE("FREEGLUT FOR UNIX --------------------------")
	FIND_PACKAGE(X11 REQUIRED)
	
	ADD_DEFINITIONS(-DHAVE_FCNTL_H)
	INCLUDE_DIRECTORIES(
		${X11_INCLUDE_DIR}
	)
	
	TARGET_LINK_LIBRARIES(${GLUT_NAME}
		${OPENGL_LIBRARIES}
		${X11_LIBRARIES}
	)
ENDIF()
