CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(soillib)

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(
	${OPENGL_INCLUDE_DIR}
)

FILE(GLOB SOIL_SOURCES src/*.c)
FILE(GLOB SOIL_HEADERS src/*.h)

ADD_LIBRARY(${SOIL_NAME} STATIC ${SOIL_SOURCES} ${SOIL_HEADERS})

TARGET_LINK_LIBRARIES(${SOIL_NAME}
	${OPENGL_LIBRARIES}
)
