CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(soillib)

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(
	include
	${OPENGL_INCLUDE_DIR}
)

FILE(GLOB SOIL_SOURCES src/*.c)

ADD_LIBRARY(${SOIL_NAME} STATIC ${SOIL_SOURCES})

TARGET_LINK_LIBRARIES(${SOIL_NAME}
	${OPENGL_LIBRARIES}
)
